namespace ProjectFlow.Domain.Enums;

public enum WorkItemPriority
{
    Low = 0,
    Medium = 1,
    High = 2
}
