namespace ProjectFlow.Domain.Enums;

public enum WorkItemStatus
{
    Todo = 0,
    Doing = 1,
    Done = 2
}
